--- a/src/main/resources/cz/kfkl/mstruct/gui/ui/powderPattern.fxml
+++ b/src/main/resources/cz/kfkl/mstruct/gui/ui/powderPattern.fxml
@@ -104,7 +104,7 @@
 				<Insets top="12.0" />
 			</VBox.margin>
 		</HBox>
-		<HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="30.0" spacing="4.0">
+		<HBox alignment="CENTER_LEFT" prefHeight="30.0" spacing="4.0">
 			<children>
 				<Label text="Geometry:" />
 				<RadioButton fx:id="geometryToggleBB" mnemonicParsing="false" text="Bragg-Brentano">
