--- a/src/main/resources/cz/kfkl/mstruct/gui/ui/mStructGui.fxml
+++ b/src/main/resources/cz/kfkl/mstruct/gui/ui/mStructGui.fxml
@@ -33,6 +33,11 @@
 			<menus>
 				<Menu mnemonicParsing="false" text="File">
 					<items>
+						<MenuItem fx:id="newMenuItem" mnemonicParsing="false" onAction="#newFile" text="New">
+							<accelerator>
+								<KeyCodeCombination alt="UP" code="N" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
+							</accelerator>
+						</MenuItem>
 						<MenuItem mnemonicParsing="false" onAction="#openFile" text="Open...">
 							<accelerator>
 								<KeyCodeCombination alt="UP" code="O" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
@@ -51,11 +56,6 @@
 						<MenuItem mnemonicParsing="false" onAction="#saveFileAsTest" text="Save As TEST">
 							<accelerator>
 								<KeyCodeCombination alt="UP" code="R" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
-							</accelerator>
-						</MenuItem>
-						<MenuItem fx:id="closeMenuItem" mnemonicParsing="false" onAction="#closeFile" text="Close">
-							<accelerator>
-								<KeyCodeCombination alt="UP" code="W" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
 							</accelerator>
 						</MenuItem>
 						<SeparatorMenuItem mnemonicParsing="false" />
