--- a/src/main/resources/cz/kfkl/mstruct/gui/ui/mStructGui.fxml
+++ b/src/main/resources/cz/kfkl/mstruct/gui/ui/mStructGui.fxml
@@ -116,6 +116,9 @@
 							<font>
 								<Font name="System Italic" size="12.0" />
 							</font>
+							<HBox.margin>
+								<Insets left="4.0" />
+							</HBox.margin>
 						</Label>
 						<Label fx:id="refinedParametersCountLabel" text="0">
 							<font>
